--- a/src/main/resources/templates/auditWork/insite/inmeeting.html
+++ b/src/main/resources/templates/auditWork/insite/inmeeting.html
@@ -1,10 +1,59 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns>
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>进场会</title>
+    <link rel="stylesheet" href="../../../static/css/bootstrap.css">
+    <script  src="../../../static/vendor/bootstrap/js/bootstrap.js"></script>
 </head>
 <body>
+    <div>
+        <div>进场会</div>
+        <div>
+            <form>
+                <div class="form-group">
+                    <label>项目名称</label>
+                    <input type="text">
+                </div>
+                <div class="form-group">
+                    <label>项目编号</label>
+                    <input type="text">
+                </div>
+                <div class="form-group">
+                    <label>项目类型</label>
+                    <input type="text">
+                </div>
+                <div class="form-group">
+                    <label>被审计机构</label>
+                    <input type="text">
+                </div>
+                <div class="form-group">
+                    <label>具体被审计机构</label>
+                    <input type="text">
+                </div>
+                <div class="form-group">
+                    <label>审计期间起</label>
+                    <input type="text">
+                </div>
+                <div class="form-group">
+                    <label>审计期间止</label>
+                    <input type="text">
+                </div>
+            </form>
 
+            <table>
+                <tr>
+                    <td>附件名</td>
+                    <td>上传时间</td>
+                    <td>操作</td>
+                </tr>
+                <tr>
+                    <td>132</td>
+                    <td>132</td>
+                    <td>132</td>
+                </tr>
+            </table>
+        </div>
+    </div>
 </body>
 </html>
