--- a/src/main/resources/templates/auditManager/index.html
+++ b/src/main/resources/templates/auditManager/index.html
@@ -2,12 +2,12 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
-
+	<title>领导工作台</title>
 	<script type="text/javascript" th:src="@{/easyui/jquery.min.js}"></script>
 	<script type="text/javascript" th:src="@{/easyui/jquery.easyui.min.js}"></script>
 	<link rel="stylesheet" type="text/css" th:href="@{/easyui/themes/default/easyui.css}">
 	<link rel="stylesheet" type="text/css" th:href="@{/easyui/themes/icon.css}"/>
-	<title>领导工作台</title>
+
 </head>
 <style>
 	a{text-decoration: none;}
@@ -29,79 +29,89 @@
     }
 </script>
 <body>
-<div id="cc" class="easyui-layout" style="width:100%;height:920px;">
+<div id="cc" class="easyui-layout" style="width:100%;height:950px;">
+	<div data-options="region:'north',split:true" style="width: 100%;height: 100px;">
+
+	</div>
 	<div data-options="region:'west',title:'领导的工作台',split:true" style="width:200px;">
 		<div class="easyui-accordion" style="width:100%;">
-			<div title="领导的工作台" iconCls="icon-ok" style="overflow:auto;padding:10px;">
+			<div title="领导的工作台"  style="overflow:auto;padding:10px;">
                       <ul>
 						  <li><a href="javascript:void(0)" onclick="addTab('待办事项','todolist')">待办事项</a></li>
 						  <li><a href="javascript:void(0)">计划项目进度</a></li>
 						  <li><a href="javascript:void(0)">人员任务总览</a></li>
 					  </ul>
 			</div>
-			<div title="被审单位管理" iconCls="icon-ok" style="overflow:auto;padding:10px;">
+			<div title="被审单位管理" style="overflow:auto;padding:10px;">
 				<ul>
 					<li><a href="javascript:void(0)" onclick="addTab('被审计机构用户','manager')">被审单位管理</a></li>
 				</ul>
 			</div>
-			<div title="用户管理" iconCls="icon-ok" style="overflow:auto;padding:10px;">
+			<div title="用户管理"  style="overflow:auto;padding:10px;">
 				<ul>
 					<li><a href="javascript:void(0)" onclick="addTab('用户管理','useradmin')">用户管理</a></li>
 				</ul>
 			</div>
-			<div title="角色管理" iconCls="icon-ok" style="overflow:auto;padding:10px;">
+			<div title="角色管理"  style="overflow:auto;padding:10px;">
 				<ul>
 					<li><a href="javascript:void(0)" onclick="addTab('角色管理','')">角色管理</a></li>
 				</ul>
 			</div>
-			<div title="审计机构管理" iconCls="icon-ok" style="overflow:auto;padding:10px;">
+			<div title="审计机构管理"  style="overflow:auto;padding:10px;">
 				<ul>
 					<li><a href="javascript:void(0)" onclick="addTab('审计机构管理','')">审计机构管理</a></li>
 				</ul>
 			</div>
-			<div title="属性管理" iconCls="icon-ok" style="overflow:auto;padding:10px;">
+			<div title="属性管理" style="overflow:auto;padding:10px;">
 				<ul>
 					<li><a href="javascript:void(0)" onclick="addTab('属性管理','')">属性管理</a></li>
 				</ul>
 			</div>
-			<div title="属性设置" iconCls="icon-ok" style="overflow:auto;padding:10px;">
+			<div title="属性设置"  style="overflow:auto;padding:10px;">
 				<ul>
 					<li><a href="javascript:void(0)" onclick="addTab('属性设置','')">属性设置</a></li>
 				</ul>
 			</div>
-			<div title="流程定义" iconCls="icon-ok" style="overflow:auto;padding:10px;">
+			<div title="流程定义" style="overflow:auto;padding:10px;">
 				<ul>
-					<li><a href="javascript:void(0)" onclick="addTab('流程定义','')">流程定义</a></li>
+					<li><a href="javascript:void(0)" onclick="addTab('流程定义','processdefine')">流程定义</a></li>
 				</ul>
 			</div>
-			<div title="操作日志" iconCls="icon-ok" style="overflow:auto;padding:10px;">
+			<div title="操作日志"  style="overflow:auto;padding:10px;">
 				<ul>
-					<li><a href="javascript:void(0)" onclick="addTab('操作日志','')">操作日志</a></li>
+					<li><a href="javascript:void(0)" onclick="addTab('操作日志','oplog')">操作日志</a></li>
 				</ul>
 			</div>
-			<div title="审计知识管理" iconCls="icon-ok" style="overflow:auto;padding:10px;">
+			<div title="审计知识管理"  style="overflow:auto;padding:10px;">
 				<ul>
-					<li><a href="javascript:void(0)" onclick="addTab('审计知识管理','')">审计知识管理</a></li>
+					<li><a href="javascript:void(0)" onclick="addTab('审计知识管理','auditlib')">审计知识管理</a></li>
 				</ul>
 			</div>
-			<div title="工作日志" iconCls="icon-ok" style="overflow:auto;padding:10px;">
+			<div title="工作日志"  style="overflow:auto;padding:10px;">
 				<ul>
-					<li><a href="javascript:void(0)" onclick="addTab('工作日志','')">工作日志</a></li>
+					<li><a href="javascript:void(0)" onclick="addTab('工作日志','worklog')">工作日志</a></li>
 				</ul>
 			</div>
-			<div title="项目类型" iconCls="icon-ok" style="overflow:auto;padding:10px;">
+			<div title="项目类型"  style="overflow:auto;padding:10px;">
 				<ul>
-					<li><a href="javascript:void(0)" onclick="addTab('项目类型','manager')">项目类型</a></li>
+					<li><a href="javascript:void(0)" onclick="addTab('项目类型','protype')">项目类型</a></li>
 				</ul>
 			</div>
 
 		</div>
 	</div>
-	<div data-options="region:'center',title:'信息展示'" style="padding:5px;background:#eee;">
-		<div id="tabs" class="easyui-tabs" style="width: 100%;height:865px; ">
-
-		</div>
+	<div data-options="region:'center'" style="padding:5px;background:#eee;">
+		<div id="tabs" class="easyui-tabs" style="width: 100%;height:865px; "></div>
 	</div>
+	<div data-options="region:'south',title:'South Title',split:true" style="height:100px;">
+		<footer>
+			<div class="container-fluid">
+				<p class="copyright">Copyright &copy; 2017.Company name All rights reserved.<a target="_blank" href="http://sc.chinaz.com/moban/">&#x7F51;&#x9875;&#x6A21;&#x677F;</a></p>
+			</div>
+		</footer>
+	</div>
+
 </div>
+
 </body>
 </html>
