--- a/src/main/resources/templates/auditWork/auditPlan.html
+++ b/src/main/resources/templates/auditWork/auditPlan.html
@@ -1,10 +1,70 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <script type="text/javascript" th:src="@{/easyui/jquery.min.js}"></script>
+    <script type="text/javascript" th:src="@{/easyui/jquery.easyui.min.js}"></script>
+    <link rel="stylesheet" type="text/css" th:href="@{/easyui/themes/default/easyui.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/easyui/themes/icon.css}"/>
 </head>
 <body>
-
+    <div style="margin-left: 500px;">
+        计划年度：
+        <select style="width: 150px;">
+            <option></option>
+        </select><br>
+        <div style="padding: 20px;">
+            <a id="search" href="#" class="easyui-linkbutton" data-options="iconCls:'icon-search'">搜索</a>
+            <a id="reset" href="#" class="easyui-linkbutton" data-options="iconCls:'icon-reset'">重置</a>
+        </div>
+    </div>
+    <div id="tool">
+        <a id="add" href="#" class="easyui-linkbutton" data-options="iconCls:'icon-add'">增加</a>
+        <a href="#" data-options="iconCls:'icon-hammer'">年度计划确认</a>
+    </div>
+    <table class="easyui-datagrid" toolbar="#tool" id="dg1" data-options="pagination:true,fitColumns:true" style="width: 100%;height: 500px;" >
+        <thead>
+        <tr>
+            <th data-options="field:'price',width:'2%',checkbox:true"></th>
+            <th data-options="field:'code',width:'14%'">计划年度</th>
+            <th data-options="field:'name',width:'14%'">计划名称</th>
+            <th data-options="field:'a',width:'14%'">审计机构</th>
+            <th data-options="field:'c',width:'14%'">计划类型</th>
+            <th data-options="field:'v',width:'14%'">计划状态</th>
+            <th data-options="field:'s',width:'14%'">创建人</th>
+            <th data-options="field:'e',width:'15%'">创建时间</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <td></td><td>001</td><td>name1</td><td>2323</td><td>2323</td><td>2323</td><td>001</td><td>001</td>
+        </tr>
+        <tr>
+            <td></td><td>002</td><td>name2</td><td>4612</td><td>2323</td><td>2323</td><td>001</td><td>001</td>
+        </tr>
+        </tbody>
+    </table>
+    <table border="1px" style="height: 200px;width: 100%;">
+        <tr>
+            <td>类型</td>
+            <td>项目总数</td>
+            <td>开展中个数</td>
+            <td>完成个数</td>
+            <td>完成占比</td>
+        </tr>
+        <tr>
+            <td>年度计划</td>
+            <td></td><td></td><td></td><td></td>
+        </tr>
+        <tr>
+            <td>新增计划</td>
+            <td></td><td></td><td></td><td></td>
+        </tr>
+        <tr>
+            <td>合计</td>
+            <td></td><td></td><td></td><td></td>
+        </tr>
+    </table>
 </body>
 </html>
