--- a/src/main/resources/templates/auditWork/auditPro.html
+++ b/src/main/resources/templates/auditWork/auditPro.html
@@ -1,10 +1,62 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <script type="text/javascript" th:src="@{/easyui/jquery.min.js}"></script>
+    <script type="text/javascript" th:src="@{/easyui/jquery.easyui.min.js}"></script>
+    <link rel="stylesheet" type="text/css" th:href="@{/easyui/themes/default/easyui.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/easyui/themes/icon.css}"/>
 </head>
 <body>
-
+    <div>
+            项目编号：<input type="text">
+            项目名称：<input type="text">
+            创建人：
+            <select style="width: 100px;">
+                <option></option>
+            </select>
+            项目类型：
+            <select style="width: 100px;">
+                <option></option>
+            </select>
+            项目状态：
+            <select style="width: 100px;">
+                <option></option>
+            </select><br>
+            <a id="search" href="#" class="easyui-linkbutton" data-options="iconCls:'icon-search'">搜索</a>
+            <a id="reset" href="#" class="easyui-linkbutton" data-options="iconCls:'icon-reset'">重置</a>
+    </div>
+<div id="tool" >
+    <a id="edit" href="#" class="easyui-linkbutton" data-options="iconCls:'icon-edit'">编辑</a>
+    <a id="stop" href="#" class="easyui-linkbutton" data-options="iconCls:'icon-stop'">终止</a>
+    <a id="in" href="#" class="easyui-linkbutton" data-options="iconCls:'icon-in'">进入项目</a>
+    <a id="submit" href="#" class="easyui-linkbutton" data-options="iconCls:'icon-submit'">提交审核</a>
+    <a id="scan" href="#" class="easyui-linkbutton" data-options="iconCls:'icon-search'">查看详情</a>
+    <a id="jindu" href="#" class="easyui-linkbutton" data-options="iconCls:'icon-search'">项目进度</a>
+</div>
+<table class="easyui-datagrid" toolbar="#tool" id="dg1" data-options="pagination:true" style="width: 100%" >
+    <thead>
+    <tr>
+        <th data-options="field:'price',checkbox:true"></th>
+        <th data-options="field:'code',width:'12%'">项目编号</th>
+        <th data-options="field:'name',width:'12%'">项目名称</th>
+        <th data-options="field:'d',width:'12%'">审计部门</th>
+        <th data-options="field:'c',width:'12%'">项目类型</th>
+        <th data-options="field:'v',width:'12%'">项目状态</th>
+        <th data-options="field:'f',width:'13%'">当前操作模块</th>
+        <th data-options="field:'r',width:'13%'">主审</th>
+        <th data-options="field:'b',width:'12%'">项目进度</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+        <td></td><td>001</td><td>name1</td><td>2323</td><td>2323</td><td>2323</td><td>2323</td><td>2323</td><td>2323</td>
+    </tr>
+    <tr>
+        <td></td><td>002</td><td>name2</td><td>4612</td><td>2323</td><td>2323</td><td>2323</td><td>2323</td><td>2323</td>
+    </tr>
+    </tbody>
+</table>
 </body>
 </html>
