--- a/src/main/resources/templates/auditWork/offsite/doubleLib.html
+++ b/src/main/resources/templates/auditWork/offsite/doubleLib.html
@@ -1,10 +1,41 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
+    <script type="text/javascript" th:src="@{/easyui/jquery.min.js}"></script>
+    <script type="text/javascript" th:src="@{/easyui/jquery.easyui.min.js}"></script>
+    <link rel="stylesheet" type="text/css" th:href="@{/easyui/themes/default/easyui.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/easyui/themes/icon.css}"/>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>疑点库</title>
 </head>
-<body>
-
+<style>
+    a{text-decoration: none;}
+    ul li{list-style: none;}
+</style>
+<body class="easyui-layout">
+<div data-options="region:'west',title:'审计要点结果筛选'" style="width: 200px;">
+    <div title="" iconCls="icon-ok" style="overflow:auto;padding:10px;">
+        <ul>
+            <li><a href="javascript:void(0)">资产前20户</a></li>
+            <li><a href="javascript:void(0)">交易前20户</a></li>
+        </ul>
+    </div>
+</div>
+<div data-options="region:'center'">
+    <table class="easyui-datagrid" style="height: 98%;">
+        <thead>
+        <tr>
+            <th field="ck" checkbox="true"></th>
+            <th data-options="field:'list'" width="49%">客户信息</th>
+            <th data-options="field:'jieguo'" width="49%">查询结果</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <td>张三</td><td>正常</td>
+        </tr>
+        </tbody>
+    </table>
+</div>
 </body>
 </html>
