--- a/src/main/resources/templates/leadWorkbench/proProcess.html
+++ b/src/main/resources/templates/leadWorkbench/proProcess.html
@@ -8,7 +8,7 @@
     <script th:src="@{/jquery-easyui-1.7.0/jquery.easyui.min.js}"></script>
 </head>
 <body>
-<div id="cc" class="easyui-layout" style="width:100%;height:%;">
+<div id="cc" class="easyui-layout" style="width:100%;height:90%;">
     <div data-options="region:'center',title:'center title'" style="padding:5px;background:#eee;">
         <table class="easyui-datagrid">
             <thead>
