--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,12 +5,12 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
 <meta name="keywords" content="Flat Dark Web Login Form Responsive Templates, Iphone Widget Template, Smartphone login forms,Login form, Widget Template, Responsive Templates, a Ipad 404 Templates, Flat Responsive Templates" />
-<link th:href="@{css/style.css}" rel='stylesheet' type='text/css' />
+<link th:href="@{/css/style.css}" rel='stylesheet' type='text/css' />
 <!--webfonts-->
 <link href='http://fonts.useso.com/css?family=PT+Sans:400,700,400italic,700italic|Oswald:400,300,700' rel='stylesheet' type='text/css'>
 <link href='http://fonts.useso.com/css?family=Exo+2' rel='stylesheet' type='text/css'>
 <!--//webfonts-->
-<script th:src="@{http://ajax.useso.com/ajax/libs/jquery/1.11.0/jquery.min.js}"></script>
+<script src="http://ajax.useso.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 </head>
 <body>
 <script>$(document).ready(function(c) {
@@ -32,7 +32,7 @@
 		</div>
 			<div class="clear"> </div>
 	<div class="avtar">
-		<img src="images/avtar.png" />
+		<img th:src="@{/img/avtar.png}" />
 	</div>
 			<form>
 					<input type="text" class="text" value="Username" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Username';}" >
@@ -45,8 +45,8 @@
 	</div>
 </div>
  <div class="copy-rights">
-					<p>Copyright &copy; 2015.Company name All rights reserved.<a target="_blank" href="http://sc.chinaz.com/moban/">&#x7F51;&#x9875;&#x6A21;&#x677F;</a></p>
-			</div>
+	 <p>Copyright &copy; 2015.Company name All rights reserved.<a target="_blank" href="http://sc.chinaz.com/moban/">&#x7F51;&#x9875;&#x6A21;&#x677F;</a></p>
+ </div>
 
 </body>
 </html>
