--- a/src/main/resources/templates/todoList.html
+++ b/src/main/resources/templates/todoList.html
@@ -9,18 +9,17 @@
     <link rel="stylesheet" type="text/css" th:href="@{/easyui/themes/icon.css}"/>
 </head>
 <body>
-<div class="easyui-layout" style="width: 100%;height:800px;">
+<div class="easyui-layout" style="height:650px;width: 100%">
     <div data-options="region:'west',title:'待办事项',split:true" style="width:230px;" >
            <div style="width: 100%;height:30px;background: rgba(0, 0, 255, 0.1)">
                <span>待办类型</span>
            </div>
      </div>
-    <div data-options="region:'center'" style="padding:5px;">
-         <div style="width: 100%;">
-             <a href="javascript:void(0)" class="easyui-linkbutton" style="height: 30px;">处理</a>
+    <div data-options="region:'center'" style="padding:0px;">
+         <div id="tool">
+             <a href="javascript:void(0)" class="easyui-linkbutton" style="width: 100px;">处理</a>
          </div>
-        <div style="width: 100%;">
-            <table class="easyui-datagrid" pagination="true" rownumbers="true" style="width:95%;height:720px;">
+            <table class="easyui-datagrid" toolbar="#tool"  data-options="pagination:true,fitColumns:true"  style="width:100%;height:648px;">
                 <thead>
                 <tr>
                     <th field="ck" checkbox="true"></th>
@@ -31,7 +30,6 @@
                 </tr>
                 </thead>
             </table>
-        </div>
     </div>
 </div>
 </body>
